sonar improvement