@@ -1,13 +1,13 @@
 package com.example.lostnfound.controller;
 
 import com.example.lostnfound.dto.PostDto;
-import com.example.lostnfound.dto.aiSearchQuery;
+import com.example.lostnfound.dto.AiSearchQuery;
 import com.example.lostnfound.model.Post;
-import com.example.lostnfound.service.AI.Embedding.EmbeddingService;
-
-import com.example.lostnfound.service.AI.GeminiChat.GeminiResponse;
-import com.example.lostnfound.service.AI.GeminiChat.QueryExecutor;
 import com.example.lostnfound.service.PostService;
+import com.example.lostnfound.service.ai.GeminiChat.GeminiResponse;
+import com.example.lostnfound.service.ai.GeminiChat.QueryExecutor;
+import com.example.lostnfound.service.ai.embedding.EmbeddingService;
+
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 
@@ -15,8 +15,6 @@ import org.modelmapper.ModelMapper;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-
-import java.io.IOException;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -39,13 +37,13 @@ public class AISearchController {
 
         @PostMapping("/basicAISearch")
         @Operation(summary = "Basic AI Search", description = "Searches for posts using AI")
-        public ResponseEntity<?> basicAISearch(@RequestBody String query) {
+        public ResponseEntity<Object> basicAISearch(@RequestBody String query) {
                 try {
                         String response = geminiResponse.getResponse(query);
                         ResponseEntity<List<Post>> result = queryExecutor.executeAISearch(response);
                         List<PostDto> postDtos = result.getBody().stream()
                                 .map(post -> modelMapper.map(post, PostDto.class))
-                                .collect(Collectors.toList());
+                                .toList();
                         return new ResponseEntity<>(postDtos, result.getStatusCode());
                 } catch (Exception e) {
                         return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(e.getMessage());
@@ -54,7 +52,7 @@ public class AISearchController {
 
         @PostMapping("/getEmbedding")
         @Operation(summary = "Get Embedding", description = "Get embedding for a given input")
-        public ResponseEntity<?> getEmbedding(@RequestBody String input) {
+        public ResponseEntity<Object> getEmbedding(@RequestBody String input) {
                 try {
                         float[] embedding = embeddingService.getEmbedding(input);
                         return new ResponseEntity<>(embedding, HttpStatus.OK);
@@ -65,13 +63,13 @@ public class AISearchController {
 
         @PostMapping("/enhancedSearch")
         @Operation(summary = "Enhanced Search", description = "Searches for posts using AI and returns similar posts")
-        public ResponseEntity<?> enhancedSearch(@RequestBody aiSearchQuery query){
+        public ResponseEntity<Object> enhancedSearch(@RequestBody AiSearchQuery query){
                 try {
                         float[] queryEmbedding = embeddingService.getEmbedding(query.getQuery());
                         List<Post> res = postService.findTopKSimilarPosts(queryEmbedding, query.getLimit());
                         List<PostDto> postDtos = res.stream()
                                 .map(post -> modelMapper.map(post, PostDto.class))
-                                .collect(Collectors.toList());
+                                .toList();
                         return new ResponseEntity<>(postDtos, HttpStatus.OK);
                 } catch (Exception e) {
                         return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(e.getMessage());
@@ -80,13 +78,13 @@ public class AISearchController {
 
         @PostMapping("/getSimilarPosts")
         @Operation(summary = "Get Similar Posts", description = "Get similar posts for a given post")
-        public ResponseEntity<?> getSimilarPosts(@RequestBody aiSearchQuery query) {
+        public ResponseEntity<Object> getSimilarPosts(@RequestBody AiSearchQuery query) {
                 try {
                         Post post = postService.getPost(query.getPostId());
                         List<Post> res = postService.findTopKSimilarPosts(post.getEmbedding(), query.getLimit());
                         List<PostDto> postDtos = res.stream()
                                 .map(p -> modelMapper.map(p, PostDto.class))
-                                .collect(Collectors.toList());
+                                .toList();
                         return new ResponseEntity<>(postDtos, HttpStatus.OK);
                 } catch (Exception e) {
                         return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(e.getMessage());
